# ParkShift

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: JSON_CONTRACT.md  PROJECT_HANDOFF.md  identity.schema.json
parkshift/: __init__.py  api.py  cache.py  cli.py  demo.py  distance.py  download.py  features.py  geometry.py  identity.py  ml.py  mlb.py  mlb_stats.py  models.py  parks.py  probability.py  report.py  savant_hr.py  schedule.py  statcast.py  statsapi.py  translator.py  validation.py  workflow.py
parkshift/data/: parks.json
parkshift/examples/: judge_2024_details.json  judge_2024_schedule.json
scripts/: audit_distance_coverage.py  build_wall_profiles.py  download_savant_home_run_data.py  render_identity_report.py  run_home_park_validation_workflow.py  train_xhr_model.py  validate_home_park_identity.py  validate_savant_source_flags.py  validate_source_parks.py
tests/: test_api.py  test_cache.py  test_cli.py  test_contract_schema.py  test_download.py  test_features.py  test_geometry.py  test_identity.py  test_mlb_stats.py  test_parks.py  test_report.py  test_savant_hr.py  test_schedule.py  test_statcast.py  test_statsapi.py  test_translator.py  test_validation.py  test_web_static.py  test_workflow.py
web/: app.js  index.html  styles.css
