[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parkshift"
version = "0.1.0"
description = "Translate real Statcast batted balls into home run outcomes across MLB parks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
]

[project.optional-dependencies]
fetch = ["pybaseball>=2.2.7"]
dev = ["pytest>=8.0"]
api = ["fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]
build-data = ["pandas>=2.0"]
ml = ["scikit-learn>=1.4", "joblib>=1.3"]

[project.scripts]
parkshift = "parkshift.cli:main"

[tool.setuptools.packages.find]
include = ["parkshift*"]

[tool.setuptools.package-data]
parkshift = ["data/*.json", "examples/*.json"]
